# TicTacToe

./: CMakeLists.txt  LICENSE  Makefile  README.md
include/: board.h  engine.h  entity.hpp  game.h  graph.hpp  math.hpp  objects.hpp  variables.h  wrapper.hpp
src/: engine.cc  entity.cpp  graph.cpp  main.cc  main.cpp  objects.cpp  wrapper.cpp
